--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "start": "umi dev",
+    "start": "concurrently \"umi dev\" \"npm run server\"",
     "build": "umi build",
     "test": "umi test",
     "server": "node ./server/index.js",
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
+    "concurrently": "^4.1.0",
     "eslint": "^5.4.0",
     "eslint-config-umi": "^0.1.5",
     "eslint-plugin-flowtype": "^2.50.0",
