--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "echarts": "^4.2.0-rc.2",
     "echarts-for-react": "^2.0.15-beta.0",
     "express": "^4.16.4",
-    "mongoose": "^5.4.1"
+    "mongoose": "^5.4.1",
+    "size-sensor": "^0.2.2"
   }
 }
